test/error/StBreakInvalid.fu
public static class Test
{
	public static bool Run()
	{
		break; //ERROR: 'break' outside loop or 'switch'
	}
}
